very quick and dirty fix so it renders on Safari

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ main > * {
   max-height: 66vh;
   overflow: hidden;
   border: 3px solid var(--color-dark);
+  width: 100%;
 }
 
 .color {
